# enpm605_spring2024_ros

./: README.md
executor_demo/: package.xml  setup.cfg  setup.py
executor_demo/executor_demo/: executor_demo_interface.py
final/final_project/: CMakeLists.txt  package.xml
final/mage_msgs/: package.xml
final_project/: CMakeLists.txt  package.xml
final_project/config/: frame.rviz
final_project/final_project/: environment_startup.py  tf_relay_interface.py
final_project/launch/: bringup_launch.py  enpm605.launch.py  final.launch.py  final_project.launch.py  localization_launch.py  multi_robots.launch.py  navigation_launch.py  robot_state_publisher.launch.py  rviz_launch.py  slam_launch.py  spawn_turtlebot3.launch.py  start_follower.launch.py  start_leader.launch.py  tb3_simulation_launch.py
final_project/map/: final_map.pgm  final_map.yaml
final_project/maps/: enpm605.yaml
first_pkg/: package.xml  setup.py
frame/frame_demo/: setup.cfg  (+2 more)
interface_demo/: package.xml  setup.py
interface_demo_msgs/: CMakeLists.txt  package.xml
navigation/: package.xml  setup.py
navigation/doc/: readme.txt
navigation/launch/: navigation.launch.py
navigation/navigation/: follower_navigator_interface.py  leader_navigator_interface.py  navigation_demo_interface.py  robot_navigator_interface.py
navigation/params/: waypoints.yaml
navigation_demo/: package.xml  setup.cfg  setup.py
parameter_demo/: setup.py
plantuml/: actions1.wsd  actions2.wsd  actions3.wsd  service_demo.wsd  services_async.wsd  services_sync.wsd
turtlebot3_pkg/: package.xml  setup.cfg  setup.py
(+91 files in other folders)
